--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
+        "illuminate/mail": "5.*",
         "vlucas/phpdotenv": "~1.0",
         "lucadegasperi/oauth2-server-laravel": "^5.0"
     },
