--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/lumen-framework": "5.1.*",
         "illuminate/mail": "5.*",
         "vlucas/phpdotenv": "~1.0",
+        "thunderid/thunderoauth-sql": "dev-master",
         "lucadegasperi/oauth2-server-laravel": "^5.0"
     },
     "require-dev": {
