--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "illuminate/mail": "5.*",
         "vlucas/phpdotenv": "~1.0",
         "thunderid/thunderoauth-sql": "dev-master",
-        "lucadegasperi/oauth2-server-laravel": "^5.0"
+        "guzzlehttp/guzzle": "~5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
