--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/lumen-framework": "5.1.*",
         "illuminate/mail": "5.*",
         "vlucas/phpdotenv": "~1.0",
-        "guzzlehttp/guzzle": "~5.3"
+        "guzzlehttp/guzzle": "~5.3",
+        "thunderid/APIHelper": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
